# thesis

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  ISSUES.md  README.md  REPRODUCIBILITY.md  final-roadmap.md  pyproject.toml
clean-docs/: Bibliography.bib  journal-paper.tex  thesis-paper.tex
clean-docs/bib/: manual.bib
clean-docs/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex
clean-docs/misc/: abstract.tex  abstract_de.tex  acronyms.tex  annex.tex  glossary.tex  self-assertion.tex  titlepage.tex
colab/: blip2_finetune_scienceqa.py  setup_colab.py
configs/: README.md
configs/experiments/: rq2_blip2_contrastive_scienceqa.yaml  rq2_blip2_generative_scienceqa.yaml  rq2_qwen2vl_generative_aokvqa.yaml  rq2_qwen2vl_generative_scienceqa.yaml  rq3_blip2_explanation_aware_scienceqa.yaml  rq3_qwen2vl_answer_only_aokvqa.yaml  rq3_qwen2vl_answer_only_scienceqa.yaml  (+6 more)
docs/: JOURNAL_AVAILABILITY.md  RELEASE_NOTES_v1.0.0.md
exploration/: 00_journey_matrix_duality.py  00_supplement_backprop_and_init.py  00_supplement_matmul_two_views.py  00_supplement_two_spaces.py  00_supplement_two_spaces_ml.py  00_vectors_and_matrices.py  00b_tensors_stacked.py  00c_reshape_and_math.py  00d_cnn_basics.py  00e_rnn_basics.py  00f_parity_rnn_training.py  00f_seq2seq_encoder_decoder.py  01_attention_from_scratch.py  02_transformer_encoder_decoder.py  03_vision_transformer.py  04_clip_deep_dive.py  05_blip2_generative_alignment.py  05_mini_llava.py  06_llava_full_pipeline.py  07_document_understanding.py  08_chart_reasoning.py  09_explanation_and_cot.py  10_alignment_comparison.py  REFERENCES.md  option__00g_gan_basics.py  option__00h_diffusion_basics.py  practice__hf_and_models.py  thesis_related__blip2_probe.py  thesis_related__clip_chartqa_probe.py
notebooks/: 00_paper_pipeline.ipynb  00_paper_pipeline.py  01_run_experiment.py  README.md
notes/: README.md
src/: README.md  __init__.py  registry.py  run.py
src/config/: io.py  (+2 more)
tests/: test_core.py
thesis_doc/: 1. How to generate the thesis proposal from the idea document.docx  generate_figures.py  proposal.md
tmp/: reference_arxiv_audit.json  reference_openalex_audit.json
(+94 files in other folders)
